--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,15 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "kriswallsmith/buzz": "~0.10",
-        "guzzle/guzzle"     : "~3.7",
+        "kriswallsmith/buzz": "~1.0",
+        "guzzle/guzzle"     : "^3.7",
         "guzzlehttp/guzzle" : "^7.0",
-        "pestphp/pest": "3.x-dev"
+        "pestphp/pest": "^2.34",
+        "pestphp/pest-plugin-faker": "2.x-dev"
     },
     "suggest": {
-        "kriswallsmith/buzz": "To use BuzzAdapter, require kriswallsmith/buzz:~0.10.",
-        "guzzle/guzzle"     : "To use GuzzleAdapter, require guzzle/guzzle:~3.7.",
+        "kriswallsmith/buzz": "To use BuzzAdapter, require kriswallsmith/buzz:~1.0.",
+        "guzzle/guzzle"     : "To use GuzzleAdapter, require guzzle/guzzle:^3.7.",
         "guzzlehttp/guzzle" : "To use GuzzleHttpAdapter, require guzzlehttp/guzzle:^7.0."
     },
     "autoload": {
