--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,9 @@
         }
     },
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
+        "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
